--- a/index.html
+++ b/index.html
@@ -1,58 +1,36 @@
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- ======== CSS ========= -->
-    <link rel="stylesheet" href="css/style.css" />
-
-    <!-- ======== FAVICON ========== -->
-    <link
-      rel="shortcut icon"
-      href="/assets/steering-2-line.svg"
-      type="image/x-co"
-    />
-
-    <!-- ======= REMIX ICONS ======== -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-
-    <!-- ====== SWIPER CSS =========-->
-    <link rel="stylesheet" href="/assets/swiper-bundle.min.css" />
-    <title>Responsive Car</title>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="css/style.css" />
+      <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"/>
+      <title>Responsive Car</title>
   </head>
   <body>
-    <!-- ============ HEADER =========== -->
-    <header class="header" id="header">
-      <nav class="nav container">
-        <a href="https://www.porsche.com/brazil/pt/aboutporsche/christophorusmagazine/archive/374/articleoverview/article01/" class="nav__logo">
-          <i class="ri-steering-2-line"></i>
-          Electric World Car
-        </a>
+    <header id="header">
+        <nav class="nav container">
+            <a href="" class="nav__logo">
+              <i class="ri-steering-2-line"></i>
+              Electric World Car
+            </a>
 
-        <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#home" class="nav__link active-link">Home</a>
-            </li>
-            <li class="nav__item">
-              <a href="#about" class="nav__link">About</a>
-            </li>
-            <li class="nav__item">
-              <a href="#popular" class="nav__link">Popular</a>
-            </li>
-            <li class="nav__item">
-              <a href="#featured" class="nav__link">Featured</a>
-            </li>
-          </ul>
-
-          <div class="nav__close" id="nav-close">
-            <i class="ri-close-line"></i>
-          </div>
-        </div>
+            <div class="nav__menu" id="nav-menu">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#home" class="nav__link active-link">Home</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#about" class="nav__link">About</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#popular" class="nav__link">Popular</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#featured" class="nav__link">Featured</a>
+                </li>
+              </ul>
+            </div>
 
         <!-- Toggle button -->
         <div class="nav__toggle" id="nav-toggle">
