--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         <nav id="nav">
             <ul class="menu">
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#Sobre">Sobre</a></li>
-                <li><a href="#Carros">Carros</a></li>
-                <li><a href=""><img src="imagens/conta.svg" alt=""></a></li>
+                <a href="#Home"><li class="itens">Home</li></a>
+                <a href="#Sobre"><li class="itens">Sobre</li></a>
+                <a href="#Carros"><li class="itens">Carros</li></a>
+                <a href=""><li class="itens"><img src="imagens/conta.svg" alt=""></li></a>
             </ul>
         </nav>
     </header>
