melhorias no site

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="#Home"><li class="itens">Home</li></a>
                 <a href="#Sobre"><li class="itens">Sobre</li></a>
                 <a href="#Carros"><li class="itens">Carros</li></a>
+                <a href=""><li class="itens">Noticias</li></a>
                 <a href=""><li class="itens"><img src="imagens/conta.svg" alt=""></li></a>
             </ul>
         </nav>
@@ -66,7 +67,7 @@
             <p>
                 Veja o futuro com carros elétricos de alto desempenho produzido pela marca de renome. Eles apresentam construções e designs futurista com plataformas novas e inovadoras que duram muito tempo.
             </p>
-            <button class="botao">Saber Mais</button>
+            <a href="" class="botao">Saber Mais</a>
             </div>
         </section>
 
