melhorias na interface
botoes adicionados

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                         </div>
                     </div>
                     <h3>R$ 1.081.000,00</h3>
+                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
                 </li>
 
                 <li class="card">
@@ -119,6 +120,7 @@
                         </div>
                     </div>
                     <h3>R$ 1.042.201,00</h3>
+                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
                 </li>
 
                 <li class="card">
@@ -142,6 +144,7 @@
                         </div>
                     </div>
                     <h3>R$ 1.350.800,00</h3>
+                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
                 </li>
 
                 <li class="card">
@@ -165,6 +168,7 @@
                         </div>
                     </div>
                     <h3>R$ 859.000,00</h3>
+                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
                 </li>
 
                 <li class="card">
@@ -188,6 +192,7 @@
                         </div>
                     </div>
                     <h3>R$ 715.900,00</h3>
+                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
                 </li>
             </ul>
         </section>
