--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsividade.css">
     <title>Eletric world Car</title>
 </head>
 <body>
     <header id="topo">
         <div class="logo">
-            <img class="logo-img" src="imagens/unknown (1).png" alt="">
+            <img class="logo-img" src="imagens/icones/logo.png" alt="">
             <strong>Eletric world Car</strong>
         </div>
 
@@ -20,23 +20,23 @@
                 <a href="#Home"><li class="itens">Home</li></a>
                 <a href="#Carros"><li class="itens">Carros</li></a>
                 <a href="#Sobre"><li class="itens">Sobre</li></a>
-                <a href=""><li class="itens">Noticias</li></a>
-                <a href=""><li class="itens"><img src="imagens/conta.svg" alt=""></li></a>
+                <a href=""><li class="itens">newsletter</li></a>
+                <a href=""><li class="itens"><img src="imagens/icones/conta.svg" alt=""></li></a>
             </ul>
         </nav>
 
         <div class="nav-toggle">
-            <img src="imagens/menu-icon.svg" alt="">
+            <img src="imagens/icones/menu-icon.svg" alt="">
         </div>
     </header>
 
     <main id="corpo">
         <section id="Home" class="margen">
-            <img class="home-img" src="imagens/home-3.png" alt="">
+            <img class="home-img" src="imagens/fotos/home.png" alt="">
         </section>
 
         <section id="Carros" class="margen">
-            <h2>Escolha seu carro eletrico <br>Da marca Porsche</h2>
+            <h2>Os melhores carros <br> Das marcas mais renomadas</h2>
 
             <ul class="conjunto-card">
                 <li class="card">
@@ -45,22 +45,22 @@
                     <img class="carro" src="imagens/carros/911 turbo s.png" alt="">
                     <div class="info">
                         <div>
-                            <img src="imagens/dashboard.svg" alt="">
+                            <img src="imagens/icones/dashboard.svg" alt="">
                             <p>2.7 Sec</p>
                         </div>
 
                         <div>
-                            <img src="imagens/posto.svg" alt="">
+                            <img src="imagens/icones/posto.svg" alt="">
                             <p>Eletrico</p>
                         </div>
 
                         <div>
-                            <img src="imagens/velocidade.svg" alt="">
+                            <img src="imagens/icones/velocidade.svg" alt="">
                             <p>330 Km/h</p>
                         </div>
                     </div>
                     <h3>R$ 1.081.000,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
+                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
                 </li>
 
                 <li class="card">
@@ -69,22 +69,22 @@
                     <img class="carro" src="imagens/carros/taycan turbo s.png" alt="">
                     <div class="info">
                         <div>
-                            <img src="imagens/dashboard.svg" alt="">
+                            <img src="imagens/icones/dashboard.svg" alt="">
                             <p>3.2 Sec</p>
                         </div>
 
                         <div>
-                            <img src="imagens/posto.svg" alt="">
+                            <img src="imagens/icones/posto.svg" alt="">
                             <p>Eletrico</p>
                         </div>
 
                         <div>
-                            <img src="imagens/velocidade.svg" alt="">
+                            <img src="imagens/icones/velocidade.svg" alt="">
                             <p>260 Km/h</p>
                         </div>
                     </div>
                     <h3>R$ 1.042.201,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
+                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
                 </li>
 
                 <li class="card">
@@ -93,22 +93,22 @@
                     <img class="carro" src="imagens/carros/turbo s cross.png" alt="">
                     <div class="info">
                         <div>
-                            <img src="imagens/dashboard.svg" alt="">
+                            <img src="imagens/icones/dashboard.svg" alt="">
                             <p>5.1 Sec</p>
                         </div>
 
                         <div>
-                            <img src="imagens/posto.svg" alt="">
+                            <img src="imagens/icones/posto.svg" alt="">
                             <p>Eletrico</p>
                         </div>
 
                         <div>
-                            <img src="imagens/velocidade.svg" alt="">
+                            <img src="imagens/icones/velocidade.svg" alt="">
                             <p>220 Km/h</p>
                         </div>
                     </div>
                     <h3>R$ 1.350.800,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
+                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
                 </li>
 
                 <li class="card">
@@ -117,22 +117,22 @@
                     <img class="carro" src="imagens/carros/boxter 718.png" alt="">
                     <div class="info">
                         <div>
-                            <img src="imagens/dashboard.svg" alt="">
+                            <img src="imagens/icones/dashboard.svg" alt="">
                             <p>4.9 Sec</p>
                         </div>
 
                         <div>
-                            <img src="imagens/posto.svg" alt="">
+                            <img src="imagens/icones/posto.svg" alt="">
                             <p>Eletrico</p>
                         </div>
 
                         <div>
-                            <img src="imagens/velocidade.svg" alt="">
+                            <img src="imagens/icones/velocidade.svg" alt="">
                             <p>275 Km/h</p>
                         </div>
                     </div>
                     <h3>R$ 859.000,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
+                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
                 </li>
 
                 <li class="card">
@@ -141,36 +141,36 @@
                     <img class="carro" src="imagens/carros/cayman.png" alt="">
                     <div class="info">
                         <div>
-                            <img src="imagens/dashboard.svg" alt="">
+                            <img src="imagens/icones/dashboard.svg" alt="">
                             <p>4.9 Sec</p>
                         </div>
 
                         <div>
-                            <img src="imagens/posto.svg" alt="">
+                            <img src="imagens/icones/posto.svg" alt="">
                             <p>Eletrico</p>
                         </div>
 
                         <div>
-                            <img src="imagens/velocidade.svg" alt="">
+                            <img src="imagens/icones/velocidade.svg" alt="">
                             <p>275 Km/h</p>
                         </div>
                     </div>
                     <h3>R$ 715.900,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/comprar.svg" alt=""></button></a>
+                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
                 </li>
             </ul>
         </section>
 
         <section id="Sobre" class="margen">
             <div>
-                <img class="sobre-img" src="imagens/sobre.png" alt="">
+                <img class="sobre-img" src="imagens/fotos/sobre.png" alt="">
                 <div class="caixa-texto">
                     <strong>2.500+</strong>
                     <p >Sobrecarrega lugares ao longo de rotas populares</p>
                 </div>
             </div>
             <div class="texto">
-                <h2>Carros eletricos <br>Tecnologia do futuro</h2>
+                <h2>Carros eletricos. <br>A tecnologia do futuro</h2>
             <p>
                 Veja o futuro com carros elétricos de alto desempenho produzido pela marca de renome. Eles apresentam construções e designs futurista com plataformas novas e inovadoras que duram muito tempo.
             </p>
@@ -186,7 +186,7 @@
               <h2>Você quer receber ofertas especiais?</h2>
 
               <p>
-                Seja o primeiro a receber todas as informações sobre nossos produtos e carros novos por e-mail, assinando nossa lista de e-mail.
+                Seja o primeiro a receber todas as informações sobre nossos produtos e carros novos por e-mail, assinando nossa newsletter.
               </p>
   
               <a class="botao" href="">Inscreva-se agora</a>
@@ -199,14 +199,12 @@
     <footer id="rodape" class="margen">
         <div>
             <div class="logo">
-                <img class="logo-img" src="imagens/logo.svg" alt="">
+                <img class="logo-img" src="imagens/icones/logo.png" alt="">
                 <h4>Eletric world Car</h4> 
             </div>
             
             <p class="desc">
-                Oferecemos os melhores carros elétricos de
-                as marcas mais reconhecidas
-                do mundo.
+                Oferecemos os melhores carros elétricos das marcas mais reconhecidas do mundo.
             </p>
         </div>
 
@@ -219,9 +217,9 @@
         </div>
         <div class="redes">
             <h4>Siga-nos</h4>
-            <a href=""><img src="imagens/facebook-icon.svg" alt="Facebook"></a>
-            <a href=""><img src="imagens/instagram-icon.svg" alt="Instagram"></a>
-            <a href=""><img src="imagens/twitter-icon.svg" alt="Twitter"></a>
+            <a href=""><img src="imagens/icones/facebook-icon.svg" alt="Facebook"></a>
+            <a href=""><img src="imagens/icones/instagram-icon.svg" alt="Instagram"></a>
+            <a href=""><img src="imagens/icones/twitter-icon.svg" alt="Twitter"></a>
         </div>
     </footer>
 </body>
