mudanças no site para desktop

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
         <nav id="nav">
             <ul class="menu">
-                <a href="#Home"><li class="itens">Home</li></a>
-                <a href="#Carros"><li class="itens">Carros</li></a>
-                <a href="#Sobre"><li class="itens">Sobre</li></a>
-                <a href=""><li class="itens">newsletter</li></a>
-                <a href=""><li class="itens"><img src="imagens/icones/conta.svg" alt=""></li></a>
+                <li class="itens"><a href="#Home">Home</a></li>
+                <li class="itens"><a href="#Carros">Carros</a></li>
+                <li class="itens"><a href="#Sobre">Sobre</a></li>
+                <li class="itens newsletter-nav"><a href="#newsletter">Newsletter</a></li>
+                <li class="itens"><a href="login.html"><img src="imagens/icones/conta.svg" alt="login"></a></li>
             </ul>
         </nav>
 
