--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="login-box">
         <h2>Login</h2>
-        <form>
+        <form class="login">
           <div class="user-box">
             <input id="usuario" type="text" name="" required="">
             <label>Usuário</label>
