melhorias no codigo

--- a/index.html
+++ b/index.html
@@ -40,123 +40,73 @@
 
             <ul class="conjunto-card">
                 <li class="card">
-                    <h3>Porsche</h3>
-                    <p>911 Turbo S</p>
+                    <h3><strong>911 Turbo S</strong> <br> Porsche</h3>
                     <img class="carro" src="imagens/carros/911 turbo s.png" alt="">
+
                     <div class="info">
-                        <div>
-                            <img src="imagens/icones/dashboard.svg" alt="">
-                            <p>2.7 Sec</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/posto.svg" alt="">
-                            <p>Eletrico</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/velocidade.svg" alt="">
-                            <p>330 Km/h</p>
-                        </div>
+                        <p class="dash">2.7 Sec</p>
+                        <p class="tipo">Eletrico</p>
+                        <p class="velocidade">330 Km/h</p>
                     </div>
+
                     <h3>R$ 1.081.000,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
+                    <button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button>
                 </li>
 
                 <li class="card">
-                    <h3>Porsche</h3>
-                    <p>Taycan Turbo S</p>
+                    <h3><strong>Taycan Turbo S</strong> <br> Porsche</h3>
                     <img class="carro" src="imagens/carros/taycan turbo s.png" alt="">
+
                     <div class="info">
-                        <div>
-                            <img src="imagens/icones/dashboard.svg" alt="">
-                            <p>3.2 Sec</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/posto.svg" alt="">
-                            <p>Eletrico</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/velocidade.svg" alt="">
-                            <p>260 Km/h</p>
-                        </div>
+                        <p class="dash">3.2 Sec</p>
+                        <p class="tipo">Eletrico</p>
+                        <p class="velocidade">260 Km/h</p>
                     </div>
+
                     <h3>R$ 1.042.201,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
+                    <button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button>
                 </li>
 
                 <li class="card">
-                    <h3>Porsche</h3>
-                    <p>Turbo S Cross</p>
+                    <h3><strong>Turbo S Cross</strong> <br> Porsche</h3>
                     <img class="carro" src="imagens/carros/turbo s cross.png" alt="">
+
                     <div class="info">
-                        <div>
-                            <img src="imagens/icones/dashboard.svg" alt="">
-                            <p>5.1 Sec</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/posto.svg" alt="">
-                            <p>Eletrico</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/velocidade.svg" alt="">
-                            <p>220 Km/h</p>
-                        </div>
+                        <p class="dash">5.1 Sec</p>
+                        <p class="tipo">Eletrico</p>
+                        <p class="velocidade">220 Km/h</p>
                     </div>
+
                     <h3>R$ 1.350.800,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
+                    <button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button>
                 </li>
 
                 <li class="card">
-                    <h3>Porsche</h3>
-                    <p>Boxter 718</p>
+                    <h3><strong>Boxter 718</strong> <br> Porsche</h3>
                     <img class="carro" src="imagens/carros/boxter 718.png" alt="">
+
                     <div class="info">
-                        <div>
-                            <img src="imagens/icones/dashboard.svg" alt="">
-                            <p>4.9 Sec</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/posto.svg" alt="">
-                            <p>Eletrico</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/velocidade.svg" alt="">
-                            <p>275 Km/h</p>
-                        </div>
+                        <p class="dash">4.9 Sec</p>
+                        <p class="tipo">Eletrico</p>
+                        <p class="velocidade">275 Km/h</p>
                     </div>
+
                     <h3>R$ 859.000,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
+                    <button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button>
                 </li>
 
                 <li class="card">
-                    <h3>Porsche</h3>
-                    <p>Cayman</p>
+                    <h3><strong>Cayman</strong> <br> Porsche</h3>
                     <img class="carro" src="imagens/carros/cayman.png" alt="">
+
                     <div class="info">
-                        <div>
-                            <img src="imagens/icones/dashboard.svg" alt="">
-                            <p>4.9 Sec</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/posto.svg" alt="">
-                            <p>Eletrico</p>
-                        </div>
-
-                        <div>
-                            <img src="imagens/icones/velocidade.svg" alt="">
-                            <p>275 Km/h</p>
-                        </div>
+                        <p class="dash">4.9 Sec</p>
+                        <p class="tipo">Eletrico</p>
+                        <p class="velocidade">275 Km/h</p>
                     </div>
+
                     <h3>R$ 715.900,00</h3>
-                    <a href=""><button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button></a>
+                    <button class="comprar"><img src="imagens/icones/comprar.svg" alt=""></button>
                 </li>
             </ul>
         </section>
